--- a/Views/Home/Details.cshtml
+++ b/Views/Home/Details.cshtml
@@ -7,6 +7,7 @@
 
 <div class="">
     <form method="post">
+        @*таким образом можно получить доступ к этому идентификатору в методе пост*@
         <input asp-for="@Model.Product.Id" hidden />
         <div class="container backgroundWhite pt-4">
             <div class="card" style="border:1px solid #000000; ">
