--- a/Views/Product/Upsert.cshtml
+++ b/Views/Product/Upsert.cshtml
@@ -49,7 +49,7 @@
                         <label asp-for="Product.Description"></label>
                     </div>
                     <div class="col-8 mb-3">
-                        <textarea asp-for="Product.Description" class="form-control @*summernote*@"></textarea>
+                        <textarea asp-for="Product.Description" class="form-control summernote"></textarea>
                         <span asp-validation-for="Product.Description" class="text-danger"></span>
                     </div>
                 </div>
