--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -33,7 +33,7 @@
                         Category
                     </th>
                     <th>
-                        Application Type
+                        Type
                     </th>
                     <th></th>
                 </tr>
