--- a/Views/Product/Upsert.cshtml
+++ b/Views/Product/Upsert.cshtml
@@ -67,7 +67,7 @@
                     </div>
                     <div class="col-8 mb-3">
                         <select asp-for="Product.ApplicationTypeId" asp-items="@Model.ApplicationTypeList" class="form-control form-control-sm">
-                            <option disabled selected>-- Select Application Type --</option>
+                            <option disabled selected>-- Select Type --</option>
                         </select>
                         <span asp-validation-for="Product.ApplicationTypeId" class="text-danger"></span>
                     </div>
