--- a/Views/ApplicationType/Delete.cshtml
+++ b/Views/ApplicationType/Delete.cshtml
@@ -4,7 +4,7 @@
     <input asp-for="Id" hidden />
     <div class="border p-3">
         <div class="form-group row">
-            <h2 class="text-info pl-3">Delete Application Type</h2>
+            <h2 class="text-info pl-3">Delete Type</h2>
         </div>
         <div class="row">
             <div class="col-8">
@@ -24,7 +24,7 @@
                         </div>
                         <div class="col">
                             <a asp-action="Index" class="btn btn-success w-100 btn-sm">
-                                <i class="fa-solid fa-arrow-right-from-bracket"></i> Return to Application List</a>
+                                <i class="fa-solid fa-arrow-right-from-bracket"></i> Return to Type List</a>
                         </div>
                     </div>
                 </div>
