--- a/Views/ApplicationType/Edit.cshtml
+++ b/Views/ApplicationType/Edit.cshtml
@@ -4,7 +4,7 @@
     <input asp-for="Id" hidden />
     <div class="border p-3">
         <div class="form-group row">
-            <h2 class="text-info pl-3">Edit Application Type</h2>
+            <h2 class="text-info pl-3">Edit Type</h2>
         </div>
         <div class="row">
             <div class="col-8">
@@ -25,7 +25,7 @@
                         </div>
                         <div class="col">
                             <a asp-action="Index" class="btn btn-success w-100 btn-sm">
-                               <i class="fa-solid fa-arrow-right-from-bracket"></i> Return to Application Type</a>
+                               <i class="fa-solid fa-arrow-right-from-bracket"></i> Return to Type</a>
                         </div>
                     </div>
                 </div>
