--- a/Views/ApplicationType/Index.cshtml
+++ b/Views/ApplicationType/Index.cshtml
@@ -1,17 +1,17 @@
 ﻿@model IEnumerable<ApplicationType>
 
 @{
-    ViewData["Title"] = "Application Type";
+    ViewData["Title"] = "Type";
 }
 
 <div class="container p-3">
     <div class="row pt-4">
         <div class="col-6">
-            <h2 class="text-primary">Application Type List</h2>
+            <h2 class="text-primary">Type List</h2>
         </div>
         <div class="col-6">
             <a asp-controller="ApplicationType" asp-action="Create" class="btn btn-primary float-end">
-                <i class="fa-solid fa-plus"></i> Create new Application Type
+                <i class="fa-solid fa-plus"></i> Create new Type
             </a>
         </div>
     </div>
@@ -24,7 +24,7 @@
             <thead>
                 <tr>
                     <th>
-                        Application Type Name
+                        Type Name
                     </th>
                     <th></th>
                 </tr>
@@ -51,6 +51,6 @@
     }
     else
     {
-        <p> No Application Type exist.</p>
+        <p> No Type exist.</p>
     }
 </div>
