--- a/Views/Home/Details.cshtml
+++ b/Views/Home/Details.cshtml
@@ -29,8 +29,8 @@
                                 <div class="row pl-3">
 
                                     <div class="col-12">
-                                        <span class="badge p-3 border" style="background-color:lavenderblush">@Model.Product.Category.Name</span>
-                                        <span class="badge p-3 border" style="background-color:azure">@Model.Product.ApplicationType.Name</span>
+                                        <span class="badge p-3 border" style="background-color:khaki">@Model.Product.Category.Name</span>
+                                        <span class="badge p-3 border" style="background-color:khaki">@Model.Product.ApplicationType.Name</span>
                                         <h3 class="text-success"></h3>
                                         <p class="text-secondary">@Html.Raw(Model.Product.Description) </p>
                                     </div>
