--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Information">About me</a>
+                        </li>
                         @if (User.IsInRole(WebConstant.AdminRole))
                         {
                            <li class="nav-item dropdown">
@@ -39,7 +42,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Index">Category</a>
-                                <a class="nav-link text-dark" asp-area="" asp-controller="ApplicationType" asp-action="Index">ApplicationType</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="ApplicationType" asp-action="Index">Type</a>
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Product</a>
                                 <li><hr class="dropdown-divider"></li>
                                 <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register new Admin</a>
