--- a/HoneyMarket.Common/Views/_ViewImports.cshtml
+++ b/HoneyMarket.Common/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using HoneyOnlineStore
+@using HoneyMarket.Utility;
 @using HoneyOnlineStore.Models
 @using HoneyOnlineStore.Components
 @using HoneyOnlineStore.Models.ViewModels
