transfer extensions from common to utility

--- a/HoneyMarket.Common/Views/Shared/_Layout.cshtml
+++ b/HoneyMarket.Common/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@using HoneyOnlineStore.Extensions
+﻿@using HoneyMarket.Utility.Extensions
 @using Microsoft.AspNetCore.Html
 @inject IHttpContextAccessor HttpContextAccessor
 
