--- a/HoneyMarket.Common/Views/_ViewImports.cshtml
+++ b/HoneyMarket.Common/Views/_ViewImports.cshtml
@@ -1,7 +1,7 @@
 ﻿@using HoneyOnlineStore
 @using HoneyMarket.Utility;
-@using HoneyOnlineStore.Models
+@using HoneyMarket.Models
 @using HoneyOnlineStore.Components
-@using HoneyOnlineStore.Models.ViewModels
+@using HoneyMarket.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, HoneyOnlineStore
