add some css style/logo/background

--- a/HoneyMarket.Common/Views/ApplicationType/Delete.cshtml
+++ b/HoneyMarket.Common/Views/ApplicationType/Delete.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ApplicationType
 
-<form method="post" asp-action="DeletePost">
+<form method="post" style="background-color:#f1f1f1" asp-action="DeletePost">
     <input asp-for="Id" hidden />
     <div class="border p-3">
         <div class="form-group row">
