--- a/HoneyMarket.Common/Views/Product/Delete.cshtml
+++ b/HoneyMarket.Common/Views/Product/Delete.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Product
 
-<form method="post">
+<form method="post" style="background-color:#f1f1f1">
     @* enctype="multipart/form-data" - for work with img *@
     <input asp-for="Id" hidden />
     <div class="border p-3">
