--- a/HoneyMarket.Common/Views/ApplicationType/Create.cshtml
+++ b/HoneyMarket.Common/Views/ApplicationType/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Category
 
-<form method="post" asp-action="Create">
+<form method="post" asp-action="Create" style="background-color:#f1f1f1">
     <div class="border p-3">
         <div class="form-group row">
             <h2 class="text-info pl-3">Add Type</h2>
