--- a/HoneyMarket.Common/Views/ApplicationType/Edit.cshtml
+++ b/HoneyMarket.Common/Views/ApplicationType/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ApplicationType
 
-<form method="post">
+<form method="post" style="background-color:#f1f1f1">
     <input asp-for="Id" hidden />
     <div class="border p-3">
         <div class="form-group row">
