--- a/HoneyMarket.Common/Views/Category/Create.cshtml
+++ b/HoneyMarket.Common/Views/Category/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Category
 
-<form method="post" asp-action="Create">
+<form method="post" style="background-color:white" asp-action="Create">
     <div class="border p-3">
         <div asp-validation-summary="All" class="text-danger"></div>
         <div class="form-group row">
