--- a/HoneyMarket.Common/Views/Category/Edit.cshtml
+++ b/HoneyMarket.Common/Views/Category/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Category
 
-<form method="post">
+<form method="post" style="background-color:white">
     <input asp-for="Id" hidden />
     <div class="border p-3">
         <div class="form-group row">
