--- a/HoneyMarket.Common/Views/Product/Upsert.cshtml
+++ b/HoneyMarket.Common/Views/Product/Upsert.cshtml
@@ -4,7 +4,7 @@
     var title = "Create product";
 }
 
-<form method="post" enctype="multipart/form-data">
+<form method="post" style="background-color:white" enctype="multipart/form-data">
     @* enctype="multipart/form-data" - for work with img *@
     @if (Model.Product.Id != 0)
     {
@@ -66,7 +66,7 @@
                         <label asp-for="Product.ApplicationTypeId"></label>
                     </div>
                     <div class="col-8 mb-3">
-                        <select asp-for="Product.ApplicationTypeId" asp-items="@Model.ApplicationTypeList" class="form-control form-control-sm">
+                        <select asp-for="Product.ApplicationTypeId" asp-items="@Model.ApplicationTypeList" class="form-select">
                             <option disabled selected>-- Select Type --</option>
                         </select>
                         <span asp-validation-for="Product.ApplicationTypeId" class="text-danger"></span>
@@ -77,7 +77,7 @@
                         <label asp-for="Product.CategoryId"></label>
                     </div>
                     <div class="col-8 mb-3">
-                        <select asp-for="Product.CategoryId" asp-items="@Model.CategorySelectedList" class="form-control form-control-sm">
+                        <select asp-for="Product.CategoryId" asp-items="@Model.CategorySelectedList" class="form-select">
                             <option disabled selected>-- Select Category --</option>
                         </select>
                         <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
